--- a/src/app/theme/auth/login/basic-login/basic-login.component.html
+++ b/src/app/theme/auth/login/basic-login/basic-login.component.html
@@ -46,7 +46,7 @@
               <div class="row m-t-30">
                 <div class="col-md-12">
                   <button type="submit" class="btn btn-primary btn-md btn-block waves-light text-center m-b-20" mdbRippleRadius [disabled]="!signInForm.valid">Sign in</button>
-                  <p class="text-inverse text-left"><a [routerLink]="['/auth/registration/simple']"><b>Already have account?</b></a></p>
+                  <p class="text-inverse text-left"><a [routerLink]="['/auth/registration/simple']"><b>Don't have account?</b></a></p>
                 </div>
               </div>
               <hr/>
